--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-318.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇺🇸 美国-256.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1012.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-282.9KB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林), server: 185.167.116.24, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.114.114.67, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-818.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-578.9KB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-726.0KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-256.7KB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-256.8KB/s(Youtube:不良林)
+      - 🇯🇵 (已存活1天)日本-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-515.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
