--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-995.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-190.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.114.114.67, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-962.0KB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.143.66.99, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-192.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-447.0KB/s(Youtube:不良林), server: 38.64.138.145, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-243.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-328.4KB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-818.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-726.0KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-256.7KB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-818.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-256.7KB/s(Youtube:不良林)
 rules:
